@@ -231,7 +231,7 @@ public class McpClientGatewayToolHandler implements GatewayToolHandler {
 
     // directly use the string content if the returned content is a single text content
     if (callToolResult.content().size() == 1
-        && callToolResult.content().getFirst() instanceof TextContent textContent) {
+        && callToolResult.content().get(0) instanceof TextContent textContent) {
       toolCallResultBuilder.content(textContent.text());
     } else {
       toolCallResultBuilder.content(callToolResult.content());
